--- a/.project
+++ b/.project
@@ -2,11 +2,13 @@
 # Compiled with Gambas 3.9.2
 Title=MMB Disk Manager
 Startup=FMain
-Version=0.0.1
+Icon=floppy.png
+Version=0.0.4
 Component=gb.image
 Component=gb.gui
 Component=gb.form
 Environment="GB_GUI=gb.qt4"
 TabSize=2
 Language=en_GB
+CreateShortcut=1
 Packager=1
