--- a/.project
+++ b/.project
@@ -10,8 +10,8 @@ Component=gb.form
 Environment="GB_GUI=gb.qt4"
 TabSize=2
 Language=en_GB
-Maintainer=jason
-Address=jason.lucas7@ntlworld.com
+Maintainer=Jason Lucas
+Address=spookyconnection@virginmedia.com
 License=General Public License
 PackageName=mmb_disk_manager-0.0.8
 Packager=1
